# simd_json

./: .clangd  .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/simdjson/: CMakeLists.txt  internal.h  json.h  result.h
src/simdjson/implement/: CMakeLists.txt  x86_implement.h  x86_normal_implement.cpp  x86_simd_implement.cpp
test/: CMakeLists.txt  test.cpp
test/local_large_json/: amazon_cellphones.ndjson
